# zk-drive

./: .gitignore  .gitleaks.toml  .golangci.yml  Dockerfile  Dockerfile.server  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  package-lock.json
.github/workflows/: ci.yml  e2e.yml  lighthouse.yml  mobile-android.yml  mobile-bridge.yml  mobile-ios.yml  security.yml
api/admin/: billing_handler.go  handler.go  ipallow_handler.go  ipallow_handler_test.go  jwt_rotate_test.go  webhook_events.go
api/auth/: handler.go  handler_clientip_test.go  oauth.go  sessions.go  totp.go
api/drive/: activity.go  agent.go  ai.go  ai_editor.go  ai_test.go  bulk.go  changes.go  changes_test.go  client_room.go  collab.go  collab_reauth_test.go  devicetoken_handler.go  document.go  features.go  file.go  folder.go  handler.go  handler_typednil_test.go  helpers.go  me.go  notification.go  onlyoffice_handler.go  onlyoffice_readlimited_test.go  onlyoffice_stream_concurrency_test.go  onlyoffice_suspension_test.go  permission.go  presign_cache_test.go  preview.go  search.go  sharing.go  tags.go  upload.go  webhook_events.go  webpush_handler.go  workspace.go
api/kchat/: handler.go
api/middleware/: admin.go  auth.go  auth_session_test.go  auth_test.go  billing_errors.go  bodylimit.go  bodylimit_test.go  collab_refresh_test.go  error_codes.go  error_codes_test.go  ipallow.go  ipallow_test.go  platform_auth.go  ratelimit.go  ratelimit_headers_test.go  ratelimit_ip.go  ratelimit_ip_test.go  ratelimit_redis.go  ratelimit_redis_test.go  ratelimit_reputation.go  ratelimit_reputation_test.go  security_headers.go  security_headers_test.go  suspension.go  suspension_test.go  tenant.go
api/platform/: handler.go  handler_test.go
api/setup/: handler.go  handler_test.go  ssrf.go  ssrf_test.go
api/webhooks/: handler.go  handler_test.go
api/ws/: handler.go  handler_test.go
cmd/audit-archiver/: main.go
cmd/audit-restore/: main.go
cmd/compact/: main.go  main_test.go
cmd/healthcheck/: main.go  main_test.go
cmd/migrate/: main.go
cmd/orphan-gc/: main.go
cmd/reconciler/: main.go
cmd/server/: collab_wiring_test.go  main.go  spa_test.go
cmd/worker/: main.go  main_test.go
deploy/: POSTGRES_SCALING.md  README.md  WEBSOCKET_PROXY.md  docker-compose.compact.yml  docker-compose.prod.yml
deploy/helm/: .helmignore  Chart.yaml  values.yaml
deploy/k8s/: audit-archiver-cronjob.yaml  clamav.yaml  configmap.yaml  hpa-server.yaml  hpa-worker.yaml  ingress.yaml  migrate-job.yaml  namespace.yaml  nats.yaml  networkpolicy.yaml  orphan-gc-cronjob.yaml  pdb-server.yaml  pdb-worker.yaml  postgres.yaml  reconciler-cronjob.yaml  secret.yaml  server.yaml  worker.yaml
deploy/terraform/: .gitignore  README.md
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
desktop/src/: App.tsx  styles.css  types.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: auth.rs  commands.rs  error.rs  events.rs  lib.rs  main.rs  tray.rs
docs/: ANDROID_APP.md  ARCHITECTURE.md  BRAND.md  CONFIGURATION.md  DEVELOPMENT.md  FACTS_AND_VOICE.md  IAM_CORE.md  MOBILE_BRIDGE.md  MOBILE_EVALUATION.md  MOBILE_IOS.md  OPERATIONS.md  PHASES.md  PRODUCT.md  PROGRESS.md  PROPOSAL.md
docs/blog/: 01-onboarding-and-admin.md  02-knowledge-worker.md  03-external-collaboration.md  04-privacy-and-zero-knowledge.md  05-compliance-and-security.md  06-operations-noops.md  07-honest-competitive-assessment.md  08-collaborative-editing.md  09-kchat-integration.md  10-desktop-sync.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
internal/collab/wasm/ymerge/: Cargo.toml
internal/collab/wasm/ymerge/src/: lib.rs
migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_folders.up.sql  003_files.down.sql  003_files.up.sql  004_permissions_activity.down.sql  004_permissions_activity.up.sql  005_sharing.down.sql  005_sharing.up.sql  006_client_rooms.down.sql  006_client_rooms.up.sql  007_file_previews.down.sql  007_file_previews.up.sql  008_scan_status.down.sql  008_scan_status.up.sql  009_notifications.up.sql  010_sso.down.sql  010_sso.up.sql  011_audit_log.up.sql  012_retention_policies.down.sql  012_retention_policies.up.sql  013_archive_status.down.sql  013_archive_status.up.sql  014_admin_fields.down.sql  014_admin_fields.up.sql  015_file_tags.down.sql  015_file_tags.up.sql  016_billing.down.sql  016_billing.up.sql  017_workspace_storage_credentials.down.sql  017_workspace_storage_credentials.up.sql  018_folder_encryption_mode.down.sql  018_folder_encryption_mode.up.sql  019_file_content_text.down.sql  019_file_content_text.up.sql  020_workspace_cmk.down.sql  020_workspace_cmk.up.sql  021_kchat_rooms.down.sql  021_kchat_rooms.up.sql  022_file_classification.down.sql  (+54 more)
mobile/rust-bridge/: .gitignore  Cargo.toml  build-android.sh  build-ios.sh
mobile/rust-bridge/src/: api.rs  auth.rs  crypto.rs  error.rs  lib.rs  runtime.rs  sync.rs
sdk/: Cargo.toml  README.md
sdk/crates/api-client/: Cargo.toml
sdk/crates/api-client/src/: changefeed.rs  error.rs  fs.rs  lib.rs  storage.rs  transport.rs
sdk/crates/auth/: Cargo.toml
sdk/crates/auth/src/: lib.rs  pkce.rs  store.rs  token.rs
sdk/crates/cli/: Cargo.toml
sdk/crates/cli/src/: main.rs
sdk/crates/crypto/: Cargo.toml
sdk/crates/crypto/src/: aad.rs  envelope.rs  error.rs  lib.rs  stream.rs
sdk/crates/crypto/testdata/: envelope-vectors.json
sdk/crates/crypto/tests/: go_compat.rs
sdk/crates/desktop-shell/: Cargo.toml
sdk/crates/desktop-shell/src/: app.rs  command.rs  config.rs  event.rs  lib.rs  state.rs  summary.rs  tray.rs
sdk/crates/desktop-shell/tests/: dispatch_integration.rs
sdk/crates/sync-engine/: Cargo.toml
sdk/crates/sync-engine/src/: catalogue.rs  conflict.rs  connectivity.rs  engine.rs  events.rs  eviction.rs  hash.rs  lib.rs  poller.rs  status.rs  watcher.rs
(+678 files in other folders)
