[package]
name = "zk-sync-crypto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust implementation of the ZK Drive Strict-ZK encryption envelope. Byte-compatible with zk-object-fabric/encryption/client_sdk (Go)."

[dependencies]
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
serde_json = { workspace = true }
