[package]
name = "zk-sync-shell"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Embedding-friendly desktop sync shell. Wraps the zk-sync-engine in a multi-workspace lifecycle harness with a command + event surface that any GUI host (Tauri, Electron, native) can drive."

[dependencies]
zk-sync-crypto = { path = "../crypto" }
zk-sync-api    = { path = "../api-client" }
zk-sync-auth   = { path = "../auth" }
zk-sync-engine = { path = "../sync-engine" }

tokio   = { workspace = true }
futures = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
